src/GameInfo/style.css
body {
	overflow: visible;  /*It seems like the default is overflow-x: hidden;*/
}

/*Experimental*/
.boxscore-container {
	overflow-x: scroll;
	overflow-y: scroll;
}

/*Experimental*/
.boxscore-container-scroll {
  height: 804px;
  /*width: auto;*/
  background-color: pink;
}

/*Need this to avoid null*/
.game-score {
	
}

.game-score-fixed {
	position: fixed;
	top: 0px;
	left: 0px; 
	right: 0px;
	z-index: 10;
	margin-bottom: 0px;
}

/*Need this to avoid null*/
.visitor-name {

}

.visitor-name-fixed {
	position: fixed;
	top: 100px; /*100, height of the game-score table above this one*/
	left: 0px; 
	right: 0px;
	z-index: 10;
}

.visitor-stats-container {
	/*position: relative;*/
	/*clear: left;*/
}

.visitor-stats-container-fixed { /*Don't need this to be fixed*/
	/*border: 2px solid orange;*/
	/*background-color: teal;*/
	/*position: relative;*/
	/*top: 164px; 108 + 56 = 164, height of the two containers above this one*/
	/*left: 0px; */
	/*right: 0px;*/
	/*z-index: 10;*/
}

.visitor-stats {
	border: 2px solid brown;
	background-color: yellow;
	margin: 0 auto; /*this centers the element*/
	/*position: absolute;*/
}

.game-score-container-OLD{
	/*border: 2px solid black;*/
	/*background-color: red;*/
	/*position: -webkit-sticky;*/
	/*position: sticky;*/
	/*top: 0px;*/
	/*position: fixed; This does not show up on mobile unless top or bottom: 0px; is added*/
	/*left: 0px; This does not show up on mobile unless top or bottom: 0px; is added*/
	/*right: 0px; This does not show up on mobile unless top or bottom: 0px; is added*/
}


.visitor-name-container-OLD{
	/*border: 2px solid green;*/
	/*background-color: gold;*/
	/*position: -webkit-sticky;*/
	/*position: sticky;*/
	/*top: 0px;*/
}

.visitor-name-OLD {
	border: 2px solid blue;
	background-color: grey;
	margin: 0 auto; /*this centers the element*/
}

/*Experimental*/
.game-info { /*seems like I need overflow to get the onScroll to work. I hope to hide the scroll bar, one day*/
	overflow: auto;
	/*overflow-x: hidden;*/
}

/*Experimental*/
.game-info-scroll {
  height: 500px;
  width: auto;
  background-color: coral;
}


/*Fix the header to the top...thead...1st row*/
.freeze-head-and-col thead tr:first-of-type th {
	position: -webkit-sticky;
	position: sticky;
	top: 0px; 
	background-color: cyan;
}

/*166, // height of game score container div plus the visitor name div*/

/*Fix the header under team name...thead...1st row*/
.freeze-head-and-col-fixed thead tr:first-of-type th {
	position: -webkit-sticky;
	position: sticky;
	top: 147px; /*100 + 47 = 147, height of the two containers above this one*/
	background-color: cyan;
}

/*Fix the first column  to the left...tbody*/
.freeze-head-and-col td:first-of-type{
	position: -webkit-sticky;
	position: sticky;
	/*background-color: white;*/
	left: 0px;
	font-weight: bold;
}

/*Fix the first column  to the left...tbody*/
.freeze-head-and-col-fixed td:first-of-type{
	position: -webkit-sticky;
	position: sticky;
	/*background-color: white;*/
	left: 0px;
	font-weight: bold;
}

/* Edit: corner fixed always...thead...1st row */
.freeze-head-and-col thead tr:first-of-type th:first-of-type{
	z-index:9;
	left: 0;
	/*background-color: black;*/
}

/* Edit: corner fixed always...thead...1st row */
.freeze-head-and-col-fixed thead tr:first-of-type th:first-of-type{
	z-index:9;
	left: 0;
	/*background-color: black;*/
	border-right: 2px outset #F9FAFB;
}

/*Bold the Footer*/
.freeze-head-and-col tfoot tr:first-of-type th {
	font-weight: bold;
}

/*Bold the Footer*/
.freeze-head-and-col-fixed tfoot tr:first-of-type th {
	font-weight: bold;
}

/* Edit: 1st cell fixed always...tfoot...1st row */
.freeze-head-and-col tfoot tr:first-of-type th:first-of-type{
	z-index:8;
	left: 0;
	/*background-color: black;*/
	position: -webkit-sticky;
	position: sticky;
}

/* Edit: 1st cell fixed always...tfoot...1st row */
.freeze-head-and-col-fixed tfoot tr:first-of-type th:first-of-type{
	z-index:8;
	left: 0;
	/*background-color: black;*/
	border-right: 2px outset #F9FAFB;
	position: -webkit-sticky;
	position: sticky;
}

/*Zebra Stripe the first cell of the table rows*/
.freeze-head-and-col tr:nth-child(even) td:first-of-type{
	background-color: #F9FAFB;
}

/*Zebra Stripe the first cell of the table rows*/
.freeze-head-and-col-fixed tr:nth-child(even) td:first-of-type{
	background-color: #F9FAFB;
	border-right: 2px outset #F9FAFB;
}

/*Zebra Stripe the first cell of the table rows*/
.freeze-head-and-col tr:nth-child(odd) td:first-of-type{
	background-color: #FFFFFF;
}

/*Zebra Stripe the first cell of the table rows*/
.freeze-head-and-col-fixed tr:nth-child(odd) td:first-of-type{
	background-color: #FFFFFF;
	border-right: 2px outset #F9FAFB;
}


@media only screen and (max-width: 768px) {

}

